--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/xieIos123/Sjlottery.git</string>
+					<string>https://github.com/xieIos123/Sjlottery/blob/master/Sjlottery.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
